Mixtures using the base class now